frontend/src/index.scss
/* ... */
[role=button] .icon {
    margin-right: 0.5em;
}
.icon.mirror:before { transform: scaleX(-1); }
a {
    text-decoration: none;
    color: var(--link);
}
button {
    background-color: var(--button-bg);
    color: var(--button-text);
    padding: .4em .6em;
    display: inline-flex; align-items: center; justify-content: center; // get closer results between chrome and safari
    &.small { padding: .1em .4em; min-height: 30px; }
    .icon { margin: -.2em 0; }
    .font-icon { vertical-align: middle; }
    border: transparent;
    text-decoration: none;
    border-radius: 0.3em;
    vertical-align: middle;
    cursor: pointer;
    &:hover { outline: 1px solid var(--mild-contrast); }
    transition: background-color .5s;
    &[disabled] {
        background-color: var(--faint-contrast);
    }
}
button.toggled {
    color: #fff;
    text-shadow: 0 0 3px #fff;
}
button.success {
    transition:  all .3s;
    background-color: var(--success);
    @extend .highlightedText;
}
a[role=button].success {
    transition:  all .3s;
    color: var(--success);
    text-shadow: 0 0 3px var(--text-high-contrast);
}
a.toggled {
    color: #223;
    text-shadow: 0 0 5px #223;
}
button, .breadcrumb { /* consistent focus color */
    &:focus-visible {
        outline: 3px solid var(--focus-color);
    }
}
a>button { width: 100%; height: 100%;  } /* link buttons, fill parent space */
input, select, ul a {
    &:focus-visible {
        border-radius: .3em;
        border-color: transparent;
        outline: 2px solid var(--focus-color);
    }
}

.icon-button {
    padding: .1em;
    font-size: 108%; height: 1.8em; // same height as text buttons (31px)
    width: 2em;
}

.error-msg {
    background-color: #faa;
    color: #833;
    padding: .5em 1em;
}
.hide-back {
    background-color: var(--bg);
}
header {
    @extend .hide-back;
    position: sticky;
    top: 0;
    padding: .2em .1em;
    z-index: 3; // necessary to not be covered by checkboxes
}

kbd {
    background-color: #eee;
    border-radius: 3px;
    border: 1px solid #b4b4b4;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2), 0 2px 0 0 rgba(255, 255, 255, 0.7) inset;
    color: #333;
    display: inline-block;
    font-size: 0.85em;
    font-weight: 700;
    line-height: 1;
    padding: 2px 4px;
    white-space: nowrap;
    margin-right: .5em;
}
.drop-over {
    box-shadow: 0 0 .3em .3em var(--warning);
}

.upload-send { @extend .ani-attention }

.sliding {
    transition: flex .5s, flex-basis 0.5s ease, opacity 0.5s ease;
    overflow: hidden !important;
}
.hide-sliding {
    white-space: nowrap;
    margin: 0 !important;
    flex: 0 !important;
}

.ani-working { animation:2s blink infinite }

@keyframes spin {
    100% { transform: rotate(360deg); }
}
@keyframes fade-in {
    0% {opacity: 0}
    100% {opacity: 1}
}
.ani-attention { animation: attention 2s ease infinite; }
@keyframes attention {
    3% { transform: rotate(2deg); }
    6% { transform: rotate(-2deg); }
    9% { transform: rotate(0); }
}


.spinner, .icon.spinner:before {
    animation: 1.5s spin infinite linear;
    display: inline-flex; justify-content: center; align-items: center; width: min-content;
}

.breadcrumb {
    padding: 0.1em 0.6em 0.2em;
    line-height: 1.8em;
    border-radius: 0.7em;
    background-color: var(--button-bg);
    color: var(--button-text);

    border-top: 1px solid #666;
    margin-right: -0.1em;
    &:nth-child(-n+3) .icon {
        padding: 0 0.2em;
        height: 1em; // effective only on file-icon
    }
}
#folder-stats, #filter-bar>span {
    font-size: 90%;
}
#folder-stats {
    margin-left: .5em;
    line-height: 2em;
    float: right;
    .icon {
        margin-right: .3em;
    }
}
#filter {
    flex: 1;
    box-sizing: border-box;
}
#filter-bar {
    display: flex;
    align-items: center;
    gap: .8em;
    margin: 0.2em 0 0;
    padding: 2px 0 1px 3px;
    height: 1.8em; /* necessary to animate displaying */
    input[type=checkbox] { margin-top: .3em; }
    span:empty { display:none } /* avoid flex-gap */
}
#login-options {
    font-size: smaller;
    input[type=checkbox] {
        transform: scale(1.5);
    }
}
/* ... */

